# skill-python-base

./: .gitignore  README.md  conftest.py  generate_qa_report.py  pyproject.toml  requirements.txt  run_chapter02_full_qa.py  run_chapter07_qa_full.py  run_chapter08_qa.py  run_qa_chapter03_standalone.py  run_qa_chapter06_full.py
.claude/: BC-CLAUDE.md  BC-UPGRADE-REPORT.md  CLAUDE.md  QA-CLAUDE.md  prd.md  settings.json
book/: BOOK-PLAN.md  QA-BIB-DETECT-REPORT.md  QA-BIDI-DETECT-REPORT.md  QA-BIDI-DETECT-TIKZ-REPORT.md  QA-BIDI-NUMBERS-REPORT.md  QA-BIDI-SECTIONS-REPORT.md  QA-BIDI-TCOLORBOX-REPORT.md  QA-BIDI-TEXT-REPORT.md  QA-BIDI-TIKZ-REPORT.md  QA-CODE-BACKGROUND-DETECT-REPORT.md  QA-CODE-DETECT-REPORT.md  QA-CODE-FIX-BACKGROUND-REPORT.md  QA-CODE-FIX-DIRECTION-REPORT.md  QA-CODE-FIX-ENCODING-REPORT.md  QA-IMG-DETECT-REPORT.md  QA-REPORT-coverpage.md  QA-REPORT-hebrew-math-detect.md  QA-REPORT-table-detect.md  QA-REPORT-table-fancy-detect.md  QA-REPORT-table-fix-alignment.md  QA-REPORT-table-fix-captions.md  QA-REPORT-table-fix-columns.md  QA-REPORT-table-overflow-detect.md  QA-REPORT.md  QA-TYPESET-DETECT-REPORT.md  QA-TYPESET-FIX-FLOAT-REPORT.md  QA-TYPESET-FIX-HBOX-REPORT.md  QA-TYPESET-FIX-TIKZ-REPORT.md  QA-TYPESET-FIX-VBOX-REPORT.md  chapter-standalone-preamble.tex  hebrew-academic-template.cls  main - Copy.tex  main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.run.xml  main.tex  (+7 more)
config/: bc_dedup.json  bc_pipeline.json  logging_config.json  qa_setup.json
docs/: BC-MECHANISM.md  How-to-create-Academic-Book-with-this-project.md  WHEN-TO-USE.md  (+2 more)
(+628 files in other folders)
